route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test
  labels:
    app: test
spec:
  to:  
    kind: Service
    name: test-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
